<resources>
    <string name="app_name" translatable="false">Wellness</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">forgot password</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? REGISTER</string>
    <string name="spanish"><u>Spanish</u></string>
    <string name="english"><u>English</u></string>
    <string name="user_registration">User Registration</string>
    <string name="full_name_hint">Full name</string>
    <string name="phone_no_hint">Phone No</string>
    <string name="email_hint">Email</string>
    <string name="register_btn_text">register</string>
    <string name="already_have_an_account_login">already have an account? login</string>
    <string name="username_empty_error">Username cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="my_cart_items">My Cart items</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="add_new_product">Add New Product</string>
    <string name="view_sales_reports">View Sales reports</string>
    <string name="product_images">Product Images</string>
    <string name="product_name">Product name</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">Product price</string>
    <string name="quantity">Quantity</string>
    <string name="product_category">Product Category</string>
    <string name="add_images">Add images</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="user_profile_label">User Profile</string>
    <string name="checkout_label">checkout</string>
    <string name="update_btn_label">UPDATE</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset_password">Send</string>
    <string name="payment_label">Payment</string>
    <string name="amount_payable">Amount Payable:</string>
    <string name="order_placed">Order Placed</string>
    <string name="go_to_orders">Go to orders</string>
    <string name="order_num">Order num</string>
    <string name="payment_id">Payment ID</string>
    <string name="go_to_home">Go To HOME</string>
</resources>